// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Join default strategy should merge scopes correctly 1`] = `
"{
  \\"hello\\": \\"hola\\",
  \\"scope\\": {
    \\"hello\\": \\"hola scope\\"
  }
}"
`;

exports[`Join scope map strategy aaaaa should use scope map strategy multi scopes 1`] = `
"{
  \\"hello\\": \\"hola\\",
  \\"scope.scope1\\": {
    \\"hello\\": \\"hola scope\\"
  },
  \\"scope.scope2\\": {
    \\"hello\\": \\"hola scope\\"
  }
}"
`;

exports[`Join scope map strategy should use multi projects scopes 1`] = `
"{
  \\"hello\\": \\"hola\\",
  \\"libA\\": {
    \\"hello\\": \\"hola scope\\"
  },
  \\"libB\\": {
    \\"hello\\": \\"hola scope\\"
  }
}"
`;

exports[`Join scope map strategy should use scope map strategy 1`] = `
"{
  \\"hello\\": \\"hola\\",
  \\"scope\\": {
    \\"hello\\": \\"hola scope\\"
  }
}"
`;

exports[`Join scope map strategy should use scope map strategy 2`] = `
"{
  \\"hello\\": \\"hello\\",
  \\"scope\\": {
    \\"hello\\": \\"hello scope\\"
  }
}"
`;

exports[`Join scope map strategy should use scope map strategy multi scopes 1`] = `
"{
  \\"hello\\": \\"hola\\",
  \\"scopeA\\": {
    \\"hello\\": \\"hola scope\\"
  },
  \\"scopeB\\": {
    \\"hello\\": \\"hola scope\\"
  }
}"
`;
